--- a/readthedocsext/theme/templates/includes/footer.html
+++ b/readthedocsext/theme/templates/includes/footer.html
@@ -2,14 +2,19 @@
 {% load i18n %}
 {% load core_tags %}
 {% load static %}
-<footer class="ui inverted basic segment attached bottom">
+
+<footer class="ui basic segment very padded">
+  <div class="ui horizontal divider very padded">
+    <i class="rocket icon"></i>
+  </div>
+
   <div class="ui container">
     {% block footer-content %}
 
       <div class="ui three column stackable doubling grid information very padded">
 
         <div class="column">
-          <h4 class="ui sub inverted header">{% trans 'Stay Updated' %}</h4>
+          <h4 class="ui sub header">{% trans 'Stay Updated' %}</h4>
 
           <div class="ui list">
             <a href="https://blog.readthedocs.com/" class="item">{% trans 'Blog' %}</a>
@@ -19,7 +24,7 @@
             </div>
           </div>
 
-          <div class="ui inverted form">
+          <div class="ui form">
             <form action="https://readthedocs.us3.list-manage.com/subscribe/post?u=a6a22369cc2b356379cf789ca&amp;id=a85a83a5a5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <p>{% trans 'Sign up for our newsletter to get our latest blog updates delivered to your inbox weekly.' %}</p>
 
@@ -41,7 +46,7 @@
         </div>
 
         <div class="column">
-          <h4 class="ui sub inverted header">{% trans 'Get Involved' %}</h4>
+          <h4 class="ui sub header">{% trans 'Get Involved' %}</h4>
 
           <div class="ui list">
             <a class="item" href="https://docs.readthedocs.io/page/intro/getting-started-with-sphinx.html">{% trans 'Getting Started Guide' %}</a>
@@ -53,7 +58,7 @@
         </div>
 
         <div class="column">
-          <h4 class="ui sub inverted header">{% trans 'Business Info' %}</h4>
+          <h4 class="ui sub header">{% trans 'Business Info' %}</h4>
 
           <div class="ui list">
             {% url "advertising" as advertising_url %}
@@ -69,96 +74,114 @@
 
       </div>
 
-      <div class="ui two column grid container">
-        <div class="column">
-          <p>
-            <small>&copy; Copyright {% now "Y" %}, {% trans 'Read the Docs, Inc & contributors' %}</small>
-          </p>
-
-          <p>
-            <small>{% trans 'Version' %} <a href="http://docs.readthedocs.io/page/changelog.html">{% readthedocs_version %}</a></small>
-          </p>
-        </div>
-
-        {% block language-select-form %}
-          <div class="column">
-            {% get_current_language as current_lang %}
-            <div class="ui form">
-              <form action="/i18n/setlang/" method="post">
-                <div class="field">
-                  <input name="next" type="hidden" value="/" />
-                </div>
-                {% csrf_token %}
-                <div class="field">
-                  <select name="language">
-                    {% for lang in LANGUAGES %}
-                      {% if lang.0 == current_lang %}
-                        <option selected="selected" value="{{ lang.0 }}">{{ lang.0|language_name_local }} [{{ lang.1 }}]</option>
-                      {% else %}
-                        <option value="{{ lang.0 }}">{{ lang.0|language_name_local }} [{{ lang.1 }}]</option>
-                      {% endif %}
-                    {% endfor %}
-                  </select>
-                </div>
-                <input class="ui secondary button" type="submit" value="{% trans 'Change Language' %}" name="submit">
-              </form>
+      <div class="ui basic center aligned segment">
+        <div class="ui very relaxed horizontal list">
+          <div class="left aligned item">
+            <i class="large copyright outline middle aligned icon"></i>
+            <div class="content">
+              <div class="header">{% trans 'Copyright' %}</div>
+              <div class="description">{% now "Y" %}, {% trans 'Read the Docs, Inc & contributors' %}</div>
             </div>
           </div>
-        {% endblock language-select-form %}
+          <div class="left aligned item">
+            <i class="large code branch icon"></i>
+            <div class="content">
+              <div class="header">{% trans 'Version' %}</div>
+              <div class="description">
+                <a href="http://docs.readthedocs.io/page/changelog.html">
+                  {% readthedocs_version %}
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="left aligned item">
+            <i class="large language icon"></i>
+            <div class="content">
+              <div class="header">{% trans 'Language' %}</div>
+              <div class="description">
+                {% block language-select-form %}
+                  {% get_current_language as current_lang %}
+                  <form action="/i18n/setlang/" method="post">
+                    <div class="field">
+                      <input name="next" type="hidden" value="/" />
+                    </div>
+                    {% csrf_token %}
+                    <div class="ui dropdown">
+                      <span class="text">{{ current_lang | language_name_local }}</span>
+                      <i class="dropdown icon"></i>
+                      <div class="menu">
+                        {% for lang in LANGUAGES %}
+                          <div class="item {% if lang.0 == current_lang %}active{% endif %}" data-value="{{ lang.0 }}">
+                            {{ lang.0 | language_name_local }} ({{ lang.1 }})
+                          </div>
+                        {% endfor %}
+                      </div>
+                    </div>
+                  </form>
+                {% endblock language-select-form %}
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+
+      <div class="ui horizontal divider very padded">
+        Sponsored by
+      </div>
+
 
       <div class="ui six column doubling grid container">
         <div class="column bottom aligned centered">
-          <div class="ui tiny inverted header centered">
+          <div class="ui tiny header centered">
             <a href="https://azure.microsoft.com" rel="noopener" target="_blank">
-              <img class="ui image" src="{% static 'images/sponsors/azure.png' %}" alt="Microsoft Azure" />
+              <img class="ui tiny centered image" src="{% static 'images/sponsors/azure.png' %}" alt="Microsoft Azure" />
               Microsoft Azure
-              <div class="inverted sub header">Cloud Computing</div>
+              <div class="sub header">Cloud Computing</div>
             </a>
           </div>
         </div>
         <div class="column bottom aligned centered">
-          <div class="ui tiny inverted header centered">
+          <div class="ui tiny header centered">
             <a href="https://cloudflare.com" rel="noopener" target="_blank">
-              <img class="ui image" src="{% static 'images/sponsors/cloudflare.png' %}" alt="CloudFlare">
+              <img class="ui tiny centered image" src="{% static 'images/sponsors/cloudflare.png' %}" alt="CloudFlare">
               Cloudflare
-              <div class="inverted sub header">DNS &amp; SSL</div>
+              <div class="sub header">DNS &amp; SSL</div>
             </a>
           </div>
         </div>
         <div class="column bottom aligned centered">
-          <div class="ui tiny inverted header centered">
+          <div class="ui tiny header centered">
             <a href="https://sentry.io/" rel="noopener" target="_blank">
-              <img class="ui image" src="{% static 'images/sponsors/sentry.png' %}" alt="Sentry">
+              <img class="ui tiny centered image" src="{% static 'images/sponsors/sentry.png' %}" alt="Sentry">
               Sentry
-              <div class="inverted sub header">Monitoring</div>
+              <div class="sub header">Monitoring</div>
             </a>
           </div>
         </div>
         <div class="column bottom aligned centered">
-          <div class="ui tiny inverted header centered">
+          <div class="ui tiny header centered">
             <a href="https://www.elastic.co/" rel="noopener" target="_blank">
-              <img class="ui image" src="{% static 'images/sponsors/elastic.png' %}" alt="Elastic">
+              <img class="ui tiny centered image" src="{% static 'images/sponsors/elastic.png' %}" alt="Elastic">
               Elastic
-              <div class="inverted sub header">Search</div>
+              <div class="sub header">Search</div>
             </a>
           </div>
         </div>
         <div class="column bottom aligned centered">
-          <div class="ui tiny inverted header centered">
+          <div class="ui tiny header centered">
             <a href="https://newrelic.com/" rel="noopener" target="_blank">
-              <img class="ui image" src="{% static 'images/sponsors/newrelic.png' %}" alt="New Relic">
+              <img class="ui tiny centered image" src="{% static 'images/sponsors/newrelic.png' %}" alt="New Relic">
               New Relic
-              <div class="inverted sub header">Performance</div>
+              <div class="sub header">Performance</div>
             </a>
           </div>
         </div>
         <div class="column bottom aligned centered">
-          <div class="ui tiny inverted header centered">
+          <div class="ui tiny header centered">
             <a href="https://www.pagerduty.com/" rel="noopener" target="_blank">
-              <img class="ui image" src="{% static 'images/sponsors/pagerduty.png' %}" alt="PagerDuty">
+              <img class="ui tiny centered image" src="{% static 'images/sponsors/pagerduty.png' %}" alt="PagerDuty">
               PagerDuty
-              <div class="inverted sub header">Monitoring</div>
+              <div class="sub header">Monitoring</div>
             </a>
           </div>
         </div>
