--- a/readthedocsext/theme/templates/projects/project_detail.html
+++ b/readthedocsext/theme/templates/projects/project_detail.html
@@ -1,15 +1,38 @@
 {% extends "projects/base_project.html" %}
 
+{% load projects_tags %}
+
 {% block body_class %}project_detail{% endblock %}
 
 {% block title %}{{ project.name }}{% endblock %}
 
 {% block project_editing %}
-    {% with overview_active="active" %}
-        {% include "core/project_bar.html" %}
-    {% endwith %}
+  {% with overview_active="active" %}
+    {% include "core/project_bar.html" %}
+  {% endwith %}
 {% endblock %}
 
 {% block content %}
-  {% include "core/project_details.html" %}
+  {% comment %}
+    This section should probably be sidebar content somewhere
+    {% if onboard %}
+      <!-- BEGIN onboard -->
+      {% include 'projects/onboard_detail.html' %}
+      <!-- END onboard -->
+    {% endif %}
+  {% endcomment %}
+
+  {% include "builds/partials/version_list.html" with objects=versions|sort_version_aware %}
+
+  {% comment %}
+    TODO remove this entirely?
+    {% if project.description %}
+      <div>
+        <h3>{% trans "Description" %}</h3>
+        <p>
+          {{ project.description|restructuredtext }}
+        </p>
+      </div>
+    {% endif %}
+  {% endcomment %}
 {% endblock %}
