--- a/readthedocsext/theme/templates/projects/project_edit.html
+++ b/readthedocsext/theme/templates/projects/project_edit.html
@@ -13,15 +13,21 @@
 {% block project_edit_content_header %}{% trans "Settings" %}{% endblock %}
 
 {% block project_edit_content %}
-  <form class="ui form" method="post" action=".">{% csrf_token %}
+  <form class="ui form" method="post" action=".">
+    {% csrf_token %}
     <p>
       {% blocktrans with advanced_url="../advanced" %}You can change how your project is built in your <a href="{{ advanced_url}}">Advanced Settings</a>.{% endblocktrans %}
     </p>
-    {{ form.as_p }}
-    <p>
-      <input class="ui button" style="display: inline;" type="submit" value="{% trans "Save" %}">
+    {% include "includes/forms/semanticui.html" with form=form %}
+
+    {# <input class="ui primary button" type="submit" value="{% trans "Save" %}" /> #}
+
+    <div class="ui horizontal divider">
       {% trans "or" context "The 'or' is in between 'Save' and 'Delete project'" %}
-       <a href="{% url "projects_delete" project.slug %}">{% trans "Delete project" %}</a>
-    </p>
+    </div>
+
+    <a class="ui secondary button" href="{% url "projects_delete" project.slug %}">
+      {% trans "Delete project" %}
+    </a>
   </form>
 {% endblock %}
