--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -55,7 +55,7 @@
   </a>
 {% endblock %}
 
-{% block list_placeholder_icon %}box{% endblock %}
+{% block list_placeholder_icon_class %}{% endblock %}
 {% block list_placeholder_header %}
   {% trans "You don't have any projects yet" %}
 {% endblock list_placeholder_header %}
