--- a/readthedocsext/theme/templates/projects/projectrelationship_list.html
+++ b/readthedocsext/theme/templates/projects/projectrelationship_list.html
@@ -2,81 +2,35 @@
 
 {% load i18n %}
 
-{% block title %}{% trans "Subprojects" %}{% endblock %}
+{% block title %}{{ project.name }} - {% trans "Subprojects" %}{% endblock %}
 
-{% block nav-dashboard %} class="active"{% endblock %}
-
-{% block editing-option-edit-proj %}class="active"{% endblock %}
-
-{% block project-subprojects-active %}active{% endblock %}
+{% block project_subprojects_active %}active{% endblock %}
 {% block project_edit_content_header %}{% trans "Subprojects" %}{% endblock %}
 
 {% block project_edit_content %}
-  <p class="ui info message">
-    {% blocktrans trimmed %}
-      Subprojects are projects hosted from the same URL as their parent project.
-      This is useful for organizing multiple projects under a custom domain.
-    {% endblocktrans %}
-  </p>
-
   {% if superproject %}
-    <p>
-      {% blocktrans trimmed with project=superproject.parent.name %}
-        This project is already configured as a subproject of {{ project }}.
-        Nested subprojects are not currently supported.
-      {% endblocktrans %}
-    </p>
+    <div class="ui icon message">
+      <i class="exclamation icon"></i>
+      <div class="content">
+        <div class="header">
+          {% trans "Nested subprojects are not supported" %}
+        </div>
+        <p>
+          {% blocktrans trimmed with project=superproject.parent.name %}
+            This project is already configured as a subproject of {{ project }}.
+          {% endblocktrans %}
+        </p>
 
-    <a href="{% url 'projects_subprojects' project_slug=superproject.parent.slug %}">
-      {% blocktrans trimmed with project=superproject.parent.name %}
-        View subprojects of {{ project }}
-      {% endblocktrans %}
-    </a>
-  {% else %}
-    <div class="ui basic segment">
-      <ul>
-        <li>
-          <a class="button"
-            href="{% url 'projects_subprojects_create' project_slug=project.slug %}">
-            {% trans "Add subproject" %}
+        <p>
+          <a href="{% url 'projects_subprojects' project_slug=superproject.parent.slug %}">
+            {% blocktrans trimmed with project=superproject.parent.name %}
+              View all subprojects of {{ project }}
+            {% endblocktrans %}
           </a>
-        </li>
-      </ul>
+        </p>
+      </div>
     </div>
-
-    <div class="ui basic segmen">
-          <ul class="ui list">
-            {% for subproject in object_list %}
-              <li class="item">
-                <div>
-                  <a
-                    href="{% url 'projects_manage' project_slug=subproject.child.slug %}">
-                    {{ subproject.child }}
-                  </a>
-                  <span>
-                    <a 
-                      href="{{ subproject.get_absolute_url }}">
-                      {{ subproject.get_absolute_url }}
-                    </a>
-                  </span>
-                </div>
-
-                <ul class="list">
-                  <li class="item">
-                    <a
-                      href="{% url 'projects_subprojects_update' project_slug=project.slug subproject_slug=subproject.child.slug %}">
-                    </a>
-                  </li>
-                </ul>
-              </li>
-            {% empty %}
-              <li class="item">
-                <p>
-                  {% trans 'No subprojects are currently configured' %}
-                </p>
-              </li>
-            {% endfor %}
-          </ul>
-    </div>
+  {% else %}
+    {% include "projects/partials/edit/subproject_list.html" with objects=object_list %}
   {% endif %}
 {% endblock %}
