--- a/readthedocsext/theme/templates/builds/partials/build_crud.html
+++ b/readthedocsext/theme/templates/builds/partials/build_crud.html
@@ -36,7 +36,7 @@
 {% block create_button %}
 {% endblock %}
 
-{% block list_placeholder_icon %}box{% endblock %}
+{% block list_placeholder_icon_class %}{% endblock %}
 {% block list_placeholder_header %}
   This project doesn't have any builds yet.
 {% endblock list_placeholder_header %}
