--- a/readthedocsext/theme/templates/builds/partials/version_list.html
+++ b/readthedocsext/theme/templates/builds/partials/version_list.html
@@ -38,7 +38,7 @@
 {% block create_button %}
 {% endblock %}
 
-{% block list_placeholder_icon %}box{% endblock %}
+{% block list_placeholder_icon_class %}{% endblock %}
 {% block list_placeholder_header %}
   This project doesn't have any active versions.
 {% endblock list_placeholder_header %}
