--- a/readthedocsext/theme/templates/projects/environmentvariable_form.html
+++ b/readthedocsext/theme/templates/projects/environmentvariable_form.html
@@ -1,22 +1,30 @@
-{% extends "projects/project_edit_base.html" %}
+{% extends "projects/environmentvariable_list.html" %}
 
 {% load i18n %}
+{% load crispy_forms_tags %}
 
-{% block title %}{% trans "Environment Variables" %}{% endblock %}
-
-{% block nav-dashboard %} class="active"{% endblock %}
-
-{% block editing-option-edit-environment-variables %}class="active"{% endblock %}
-
-{% block project-environment-variables-active %}active{% endblock %}
-{% block project_edit_content_header %}{% trans "Environment Variables" %}{% endblock %}
+{% block project_edit_content_subheader %}
+  {% trans "Add variable" %}
+{% endblock %}
 
 {% block project_edit_content %}
+  <div class="ui icon message">
+    <i class="exclamation icon"></i>
+    <div class="content">
+      {% blocktrans trimmed %}
+        This environment variable will be available to all build
+        commands.  The value of the this variable will be hidden
+        after adding, for security purposes.
+      {% endblocktrans %}
+    </div>
+  </div>
+
   <form class="ui form"
       method="post"
       action="{% url 'projects_environmentvariables_create' project_slug=project.slug %}">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input class="ui button" type="submit" value="{% trans "Save" %}">
+    {{ form|crispy }}
+
+    <input class="ui primary button" type="submit" value="{% trans "Add variable" %}">
   </form>
 {% endblock %}
