--- a/readthedocsext/theme/templates/projects/integration_form.html
+++ b/readthedocsext/theme/templates/projects/integration_form.html
@@ -1,23 +1,19 @@
-{% extends "projects/project_edit_base.html" %}
+{% extends "projects/integration_list.html" %}
 
 {% load i18n %}
+{% load crispy_forms_tags %}
 
-{% block title %}{% trans "Integrations" %}{% endblock %}
-
-{% block nav-dashboard %} class="active"{% endblock %}
-
-{% block editing-option-edit-integrations %}class="active"{% endblock %}
-
-{% block project-integrations-active %}active{% endblock %}
-{% block project_edit_content_header %}{% trans "Integrations" %}{% endblock %}
+{% block project_edit_content_subheader %}
+  {% trans "Add integration" %}
+{% endblock %}
 
 {% block project_edit_content %}
   <form
-      method="post"
       class="ui form"
+      method="post"
       action="{% url 'projects_integrations_create' project_slug=project.slug %}">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input class="ui button" type="submit" value="{% trans "Add integration" %}">
+    {{ form|crispy }}
+    <input class="ui primary button" type="submit" value="{% trans "Add integration" %}">
   </form>
 {% endblock %}
