--- a/readthedocsext/theme/templates/projects/integration_webhook_detail.html
+++ b/readthedocsext/theme/templates/projects/integration_webhook_detail.html
@@ -1,18 +1,9 @@
-{% extends "projects/project_edit_base.html" %}
+{% extends "projects/integration_list.html" %}
 
 {% load i18n %}
 
-{% block title %}{% trans "Integration" %}{% endblock %}
-
-{% block nav-dashboard %} class="active"{% endblock %}
-
-{% block editing-option-edit-integrations %}class="active"{% endblock %}
-
-{% block project-integrations-active %}active{% endblock %}
-{% block project_edit_content_header %}
-  {% blocktrans trimmed with type=integration.get_integration_type_display %}
-    Integration - {{ type }}
-  {% endblocktrans %}
+{% block project_edit_content_subheader %}
+  {{ integration.get_integration_type_display }}
 {% endblock %}
 
 {% block project_edit_content %}
@@ -43,22 +34,26 @@
           If this integration is not functioning correctly,
           you can try re-syncing it. Otherwise you'll need to update
           the configuration on your repository.
-          You can use the following address to manually configure this webhook.
-        {% endblocktrans %}
-      </p>
-    {% else %}
-      <p>
-        {% blocktrans trimmed %}
-          To manually configure this webhook with your provider, use the
-          following address:
         {% endblocktrans %}
       </p>
     {% endif %}
 
     <p>
-      {% url 'api_webhook' project_slug=project.slug integration_pk=integration.pk as webhook_url %}
-      <a href="//{{ PRODUCTION_DOMAIN }}{{ webhook_url }}">{{ PRODUCTION_DOMAIN }}{{ webhook_url }}</a>
+      {% blocktrans trimmed %}
+        To manually configure this webhook with your provider, use the
+        following address:
+      {% endblocktrans %}
     </p>
+
+    <div class="ui segment">
+      {% url 'api_webhook' project_slug=project.slug integration_pk=integration.pk as webhook_url %}
+      {% with "//"|add:PRODUCTION_DOMAIN|add:webhook_url as integration_url %}
+        <code>{{ integration_url }}</code>
+        <span class="ui mini compact icon basic button" data-clipboard-text="{{ integration_url }}" data-content="{% trans "Copied!" %}">
+          <i class="copy outline icon"></i>
+        </span>
+      {% endwith %}
+    </div>
 
     {% block integration_details %}{% endblock %}
 
@@ -75,35 +70,31 @@
   {% if integration.has_sync %}
     <form class="ui form" method="post" action="{% url 'projects_integrations_webhooks_sync' project_slug=project.slug integration_pk=integration.pk %}">
       {% csrf_token %}
-      <input class="ui button" type="submit" value="{% trans "Resync webhook" %}">
+      <button class="ui button">
+        <i class="refresh icon"></i>
+        {% trans "Resync webhook" %}
+      </button>
     </form>
   {% endif %}
 
-  <h3>{% trans "Recent Activity" %}</h3>
+  <h3 class="ui small header">{% trans "Recent Activity" %}</h3>
 
-  <div>
-    <ul class="ui list">
+  <div class="ui segment">
+    <div class="ui list">
       {% for exchange in integration.exchanges.all %}
-        <li class="item">
-          <span class="status status-{% if exchange.failed %}fail{% else %}pass{% endif %}">{{ exchange.status_code }}</span>
+        <div class="item">
+          <span class="ui {% if exchange.failed %}red{% else %}green{% endif %} label">{{ exchange.status_code }}</span>
           <a href="{% url 'projects_integrations_exchanges_detail' project_slug=project.slug integration_pk=integration.pk exchange_pk=exchange.pk %}">
             {% blocktrans trimmed with date=exchange.date|timesince %}
               {{ date }} ago
             {% endblocktrans %}
           </a>
-        </li>
+        </div>
       {% empty %}
-        <li class="item">
-          <span>
-            {% trans 'There is no recent activity' %}
-          </span>
-        </li>
+        <div class="item">
+          {% trans 'There is no recent activity' %}
+        </div>
       {% endfor %}
-    </ul>
+    </div>
   </div>
-
-  <form class="ui form" method="post" action="{% url 'projects_integrations_delete' project_slug=project.slug integration_pk=integration.pk %}">
-    {% csrf_token %}
-    <input class="ui button" type="submit" value="{% trans "Delete webhook" %}">
-  </form>
 {% endblock %}
