--- a/readthedocsext/theme/templates/projects/project_edit.html
+++ b/readthedocsext/theme/templates/projects/project_edit.html
@@ -1,5 +1,6 @@
 {% extends "projects/project_edit_base.html" %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 
 {% block project-edit-active %}active{% endblock %}
 {% block nav-dashboard %} class="active"{% endblock %}
@@ -13,21 +14,55 @@
 {% block project_edit_content_header %}{% trans "Settings" %}{% endblock %}
 
 {% block project_edit_content %}
+  <div class="ui info message">
+    {% blocktrans trimmed with advanced_url="../advanced" %}
+      There are more options to configure how this project is built in
+      <a href="{{ advanced_url}}">Advanced Settings</a>.
+    {% endblocktrans %}
+  </div>
+
   <form class="ui form" method="post" action=".">
     {% csrf_token %}
+    {{ form|crispy }}
+    <input class="ui primary button" type="submit" value="{% trans "Save" %}" />
+  </form>
+
+  <div class="ui horizontal divider">
+    {% trans "More" %}
+  </div>
+
+  <div class="ui red segment">
+    <h3 class="ui small header">
+      {% trans "Delete project" %}
+    </h3>
+
     <p>
-      {% blocktrans with advanced_url="../advanced" %}You can change how your project is built in your <a href="{{ advanced_url}}">Advanced Settings</a>.{% endblocktrans %}
+      {% blocktrans trimmed %}
+        Removing this project will also remove the project configuration and all
+        hosted documentation. Be careful, this cannot be undone!
+      {% endblocktrans %}
     </p>
-    {% include "includes/forms/semanticui.html" with form=form %}
 
-    {# <input class="ui primary button" type="submit" value="{% trans "Save" %}" /> #}
-
-    <div class="ui horizontal divider">
-      {% trans "or" context "The 'or' is in between 'Save' and 'Delete project'" %}
-    </div>
-
-    <a class="ui secondary button" href="{% url "projects_delete" project.slug %}">
+    <a class="ui button" data-modal="#modal-project-delete">
+      <i class="trash icon"></i>
       {% trans "Delete project" %}
     </a>
-  </form>
+    <div class="ui mini modal" id="modal-project-delete">
+      <div class="header">
+        {% trans "Delete project" %}
+      </div>
+      <div class="content">
+        {% blocktrans trimmed with project=project.name %}
+          Are you sure you want to delete the project {{project}}? This action
+          cannot be undone.
+        {% endblocktrans %}
+      </div>
+      <div class="actions">
+        <form method="post" action="{% url "projects_delete" project.slug %}">
+          {% csrf_token %}
+          <input class="ui negative button" type="submit" value="{% trans "Delete project" %}">
+        </form>
+      </div>
+    </div>
+  </div>
 {% endblock %}
