--- a/readthedocsext/theme/templates/projects/project_edit_base.html
+++ b/readthedocsext/theme/templates/projects/project_edit_base.html
@@ -8,8 +8,6 @@
   {% endwith %}
 {% endblock %}
 
-{% block body_class %}{{ block.super }} project-edit{% endblock %}
-
 {% block content %}
   {# TODO don't do this. fix the spacing issue with the container #}
   <p></p>
@@ -19,25 +17,56 @@
     <div class="ui three wide column">
 
       <div class="ui vertical pointing fluid menu">
-        <a class="item {% block project-edit-active %}{% endblock %}" href="{% url "projects_edit" project.slug %}">{% trans "Settings" %} </a>
-        <a class="item {% block project-advanced-active %}{% endblock %}" href="{% url "projects_advanced" project.slug %}">{% trans "Advanced Settings" %} </a>
-        <a class="item {% block project-domains-active %}{% endblock %}" href="{% url "projects_domains" project.slug %}">{% trans "Domains" %}</a>
-        <a class="item {% block project-users-active %}{% endblock %}" href="{% url "projects_users" project.slug %}">{% trans "Maintainers" %}</a>
-        <a class="item {% block project-redirects-active %}{% endblock %}" href="{% url "projects_redirects" project.slug %}">{% trans "Redirects" %}</a>
-        <a class="item {% block project-translations-active %}{% endblock %}" href="{% url "projects_translations" project.slug %}">{% trans "Translations" %}</a>
-        <a class="item {% block project-subprojects-active %}{% endblock %}" href="{% url "projects_subprojects" project.slug %}">{% trans "Subprojects" %}</a>
-        <a class="item {% block project-integrations-active %}{% endblock %}" href="{% url "projects_integrations" project.slug %}">{% trans "Integrations" %}</a>
-        <a class="item {% block project-environment-variables-active %}{% endblock %}" href="{% url "projects_environmentvariables" project.slug %}">{% trans "Environment Variables" %}</a>
-        <a class="item {% block project-notifications-active %}{% endblock %}" href="{% url "projects_notifications" project.slug %}">{% trans "Notifications" %}</a>
-        <a class="item {% block project-search-analytics-active %}{% endblock %}" href="{% url "projects_search_analytics" project.slug %}">{% trans "Search Analytics" %}</a>
+        <a class="item {% block project-edit-active %}{% endblock %}" href="{% url "projects_edit" project.slug %}">
+          {% trans "Settings" %}
+        </a>
+        <a class="item {% block project-advanced-active %}{% endblock %}" href="{% url "projects_advanced" project.slug %}">
+          {% trans "Advanced Settings" %}
+        </a>
+        <a class="item {% block project_domains_active %}{% endblock %}" href="{% url "projects_domains" project.slug %}">
+          {% trans "Domains" %}
+        </a>
+        <a class="item {% block project_users_active %}{% endblock %}" href="{% url "projects_users" project.slug %}">
+          {% trans "Maintainers" %}
+        </a>
+        <a class="item {% block project_redirects_active %}{% endblock %}" href="{% url "projects_redirects" project.slug %}">
+          {% trans "Redirects" %}
+        </a>
+        <a class="item {% block project_translations_active %}{% endblock %}" href="{% url "projects_translations" project.slug %}">
+          {% trans "Translations" %}
+        </a>
+        <a class="item {% block project_subprojects_active %}{% endblock %}" href="{% url "projects_subprojects" project.slug %}">
+          {% trans "Subprojects" %}
+        </a>
+        <a class="item {% block project_integrations_active %}{% endblock %}" href="{% url "projects_integrations" project.slug %}">
+          {% trans "Integrations" %}
+        </a>
+        <a class="item {% block project_environment_variables_active %}{% endblock %}" href="{% url "projects_environmentvariables" project.slug %}">
+          {% trans "Environment Variables" %}
+        </a>
+        <a class="item {% block project_notifications_active %}{% endblock %}" href="{% url "projects_notifications" project.slug %}">
+          {% trans "Notifications" %}
+        </a>
+        <a class="item {% block project_search-analytics_active %}{% endblock %}" href="{% url "projects_search_analytics" project.slug %}">
+          {% trans "Search Analytics" %}
+        </a>
         {% if USE_PROMOS %}
-          <a class="item {% block project-ads-active %}{% endblock %}" href="{% url "projects_advertising" project.slug %}">{% trans "Advertising" %} </a>
+          <a class="item {% block project_ads_active %}{% endblock %}" href="{% url "projects_advertising" project.slug %}">
+            {% trans "Advertising" %}
+          </a>
         {% endif %}
       </div>
     </div>
 
     <div class="ui nine wide column">
-      <h2 class="ui medium header">{% block project_edit_content_header %}{% endblock %}</h2>
+      <h2 class="ui medium dividing header">
+        {% block project_edit_content_header %}
+        {% endblock project_edit_content_header %}
+        <div class="sub header">
+          {% block project_edit_content_subheader %}
+          {% endblock project_edit_content_subheader %}
+        </div>
+      </h2>
 
       {% block project_edit_content %}
       {% endblock project_edit_content %}
