--- a/readthedocsext/theme/templates/projects/project_redirects.html
+++ b/readthedocsext/theme/templates/projects/project_redirects.html
@@ -1,117 +1,55 @@
 {% extends "projects/project_edit_base.html" %}
 
 {% load i18n %}
+{% load crispy_forms_tags %}
 
-{% block title %}{% trans "Edit Redirects" %}{% endblock %}
+{% block title %}{{ project.name }} - {% trans "Redirects" %}{% endblock %}
 
-{% block project-redirects-active %}active{% endblock %}
+{% block project_redirects_active %}active{% endblock %}
 {% block project_edit_content_header %}{% trans "Redirects" %}{% endblock %}
 
 {% block extra_scripts %}
-    <script type="text/javascript">
-
-        var update_outcome = function(ev) {
-            var field_from_url = $('#id_from_url');
-                field_to_url =  $('#id_to_url');
-                option = $('#id_redirect_type').val();
-                redirect_from = "";
-                redirect_target = "";
-
-            if (option === "prefix") {
-                redirect_from = field_from_url.val() + "faq.html";
-                redirect_target = "/$lang/$version/faq.html";
-            }
-            else if (option === "page" ) {
-                redirect_from = "/$lang/$version/" + field_from_url.val().replace(/^\/+/, '');
-                redirect_target = "/$lang/$version/" + field_to_url.val().replace(/^\/+/, '');
-            }
-            else if (option === "exact" ) {
-                redirect_from =  field_from_url.val();
-                redirect_target =  field_to_url.val();
-            }
-
-            if (redirect_from && redirect_target) {
-                var result = "Outcome: " + redirect_from + " -> " + redirect_target;
-                $('#dynamic-redirect').text(result).show();
-            } else {
-                $('#dynamic-redirect').text("").hide();
-            }
-        };
-
-        $(document).ready(function() {
-            $('#id_from_url').parent().hide()
-            $('#id_to_url').parent().hide()
-            $('#dynamic-redirect').hide()
-
-            $('#id_redirect_type').bind('change', function(ev) {
-                $('#id_from_url').val('');
-                $('#id_to_url').val('');
-                $('#id_from_url').parent().hide()
-                $('#id_to_url').parent().hide()
-
-                if (this.value == 'prefix') {
-                    $('#id_from_url').parent().show()
-                    $('#id_to_url').parent().hide()
-                }
-                else if (this.value == 'page') {
-                    $('#id_from_url').parent().show()
-                    $('#id_to_url').parent().show()
-                }
-                else if (this.value == 'exact') {
-                    $('#id_from_url').parent().show()
-                    $('#id_to_url').parent().show()
-                }
-            update_outcome(ev);
-          });
-          $('#id_from_url, #id_to_url').keyup(update_outcome);
-        });
-
-    </script>
+  <script type="text/javascript">
+readthedocs.site.project.admin.ProjectRedirectView.install();
+  </script>
 {% endblock %}
 
 {% block project_edit_content %}
-  <p class="ui info message">
-    {% trans "Add redirects for your project. This allows you to fix links to old pages that are 404ing." %}
-  </p>
+  {% include "projects/partials/edit/redirect_list.html" with objects=redirects %}
 
- {#  if redirects|length > 0  #}
-    <h3>{% trans "Redirects" %}</h3>
-    <div>
-      <div>
-        <div class="ui basic segment">
+  <h3 class="ui small heading">
+    {% trans "Add Redirect" %}
+  </h3>
+  <div id="project-redirect-form">
+    <form class="ui form" method="post" action=".">
+      {% csrf_token %}
+      {{ form|crispy }}
+
+      <div class="ui disabled segment" data-bind="css: {disabled: is_example_disabled}">
+        <div class="ui sub header">
+          Example redirect:
+        </div>
+        <div data-bind="visible: !is_example_disabled()">
           <div class="ui list">
-            {% for redirect in redirects %}
-              <div class="item">
-                <div>
-                  {{ redirect.get_redirect_type_display }}
-                </div>
-                {% if redirect.get_from_to_url_display %}
-                  <div>
-                    {{ redirect.get_from_to_url_display }}
-                  </div>
-                {% endif %}
-                <div class="list">
-                  <div class="item">
-                    <form class="ui form" method="post" action="{% url "projects_redirects_delete" project.slug %}">
-                      {% csrf_token %}
-                      <input type="hidden" name="id_pk" value="{{ redirect.pk }}" />
-                      <input class="ui button" type="submit" value="{% trans "Remove" %}">
-                    </form>
-                  </div>
-                </div>
+            <div class="item">
+              <div class="ui small basic label">
+                <i class="map marker icon"></i>
+                Redirect from
               </div>
-            {% endfor %}
+              <code data-bind="text: redirect_from"></code>
+            </div>
+            <div class="item">
+              <div class="ui small basic label">
+                <i class="map marker icon"></i>
+                Redirect to
+              </div>
+              <code data-bind="text: redirect_to"></code>
+            </div>
           </div>
-        </di>
+        </div>
       </div>
-    </div>
-    {# {% endif %} #}
 
-  <form class="ui form" method="post" action=".">{% csrf_token %}
-    {{ form.as_p }}
-    <div id="dynamic-redirect" class="empty"></div>
-    <p>
-      <input class="ui button" style="display: inline;" type="submit" value="{% trans "Add" %}">
-    </p>
-  </form>
+      <input class="ui primary button" type="submit" value="{% trans "Add redirect" %}">
+    </form>
+  </div>
 {% endblock %}
