--- a/readthedocsext/theme/templates/projects/project_users.html
+++ b/readthedocsext/theme/templates/projects/project_users.html
@@ -1,54 +1,29 @@
 {% extends "projects/project_edit_base.html" %}
 
 {% load i18n %}
+{% load crispy_forms_tags %}
 
-{% block title %}{% trans "Edit Maintainers" %}{% endblock %}
+{% block title %}{{ project.name }} - {% trans "Maintainers" %}{% endblock %}
 
-{% block project-users-active %}active{% endblock %}
+{% block project_users_active %}active{% endblock %}
 {% block project_edit_content_header %}{% trans "Maintainers" %}{% endblock %}
 
 {% block project_edit_content %}
-  <p class="ui info message">
-    {% trans "This allows you to add maintainers to your project. It gives them admin access to the project, so be careful!" %}
-  </p>
+  {% include "projects/partials/edit/user_list.html" with objects=users %}
 
-  <h3>{% trans "Existing Maintainers" %}</h3>
-  <p>
-    <ul class="ui list">
-    {% for user in users %}
-        <li class="item">
-        <a href="{% url "profiles_profile_detail" user.username %}">
-        {{ user }}
-        </a>
-        </li>
-    {% endfor %}
-    </ul>
+  <h3 class="ui medium header">
+    {% trans "Add Maintainer" %}
+  </h3>
 
-  {% if users|length > 1 %}
-  <h3>{% trans "Remove Maintainer" %}</h3>
-    <p>
-        <form class="ui form" method="post" action="{% url "projects_users_delete" project.slug %}">
-            {% csrf_token %}
-          <select class="ui dropdown" id="id_user" name="username">
-          {% for user in users %}
-            {% if user != request.user %}
-            <option value="{{ user.username }}">{{ user }}</option>
-            {% endif %}
-          {% endfor %}
-          </select>
-          <input class="ui button" type="submit" value="{% trans "Remove" %}">
-        </form>
-    </p>
-  {% endif %}
+  <div class="ui info message">
+    <i class="info icon"></i>
+    {% blocktrans trimmed %}
+      Adding a user as a maintainer will give the user admin access to this project.
+    {% endblocktrans %}
+  </div>
 
-  <h3>{% trans "Add Maintainer" %}</h3>
-  <p>
-    {% trans "Choose which user you would like to add." %}
-  </p>
   <form class="ui form" method="post" action=".">{% csrf_token %}
-    {{ form.as_p }}
-    <p>
-      <input class="ui button" style="display: inline;" type="submit" value="{% trans "Add" %}">
-    </p>
+    {{ form | crispy }}
+    <input class="ui primary button" type="submit" value="{% trans "Add maintainer" %}">
   </form>
 {% endblock %}
