--- a/readthedocsext/theme/templates/projects/domain_list.html
+++ b/readthedocsext/theme/templates/projects/domain_list.html
@@ -10,3 +10,5 @@
 {% block project_edit_content %}
   {% include "projects/partials/edit/domain_list.html" with objects=object_list %}
 {% endblock %}
+
+{% block project_edit_sidebar_embed_doc %}custom_domains{% endblock %}
